--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/native": "^6.0.2",
+    "appwrite": "^16.0.2",
     "expo": "^51.0.38",
     "expo-av": "^14.0.7",
     "expo-constants": "~16.0.2",
@@ -38,7 +40,9 @@
     "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.5.0",
     "react-native-calendars": "^1.1307.0",
+    "react-native-date-picker": "^5.0.7",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
