--- a/package.json
+++ b/package.json
@@ -20,18 +20,24 @@
     "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/native": "^6.0.2",
     "appwrite": "^16.0.2",
+    "date-fns": "^4.1.0",
     "expo": "^51.0.38",
     "expo-av": "^14.0.7",
     "expo-constants": "~16.0.2",
+    "expo-device": "^7.0.1",
     "expo-document-picker": "^12.0.2",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
+    "expo-notifications": "~0.28.19",
+    "expo-permissions": "^14.4.0",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "formik": "^2.4.6",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -40,20 +46,25 @@
     "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.5.0",
     "react-native-calendars": "^1.1307.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-date-picker": "^5.0.7",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.10.1",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
-    "tailwind-react-native-classnames": "^1.5.1"
+    "tailwind-react-native-classnames": "^1.5.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
