--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aora",
+  "name": "CKD",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -40,6 +40,7 @@
     "lodash.debounce": "^4.0.8",
     "moment": "^2.30.1",
     "nativewind": "^2.0.11",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -47,13 +48,16 @@
     "react-native-appwrite": "^0.5.0",
     "react-native-calendars": "^1.1307.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-collapsible": "^1.6.2",
     "react-native-date-picker": "^5.0.7",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.10.1",
+    "react-native-toast-message": "^2.2.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
