--- a/app.json
+++ b/app.json
@@ -4,11 +4,11 @@
     "slug": "ckd",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "assets/images/profile.png",
+    "icon": "assets/images/full_logo.png",
     "scheme": "CKD",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "assets/1.png",
+      "image": "assets/images/splash_screen.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -18,7 +18,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "assets/adaptive-icon.png",
+        "foregroundImage": "assets/images/splash_screen.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.aditya210399.CKD"
@@ -29,7 +29,8 @@
       "favicon": "assets/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-localization"
     ],
     "experiments": {
       "typedRoutes": true
