--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.3",
     "expo-notifications": "~0.28.19",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
@@ -36,12 +37,15 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "formik": "^2.4.6",
+    "i18n-js": "^4.5.1",
+    "i18next": "^24.2.1",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^15.4.0",
     "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.5.0",
@@ -50,6 +54,7 @@
     "react-native-collapsible": "^1.6.2",
     "react-native-date-picker": "^5.0.7",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-localize": "^3.3.0",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.10.1",
