--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "assets/images/splash_screen.png",
+        "foregroundImage": "assets/images/full_logo.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.aditya210399.CKD"
