--- a/app.json
+++ b/app.json
@@ -26,7 +26,7 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "assets/favicon.png"
+      "favicon": "assets/icon.png"
     },
     "plugins": [
       "expo-router",
